# simple-docx-template

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/core/: constant.rs  default_handler.rs  docx_processor.rs  image_manager.rs  mod.rs  relationship_manager.rs  utils.rs
src/public/: docx.rs  error.rs  mod.rs  value_extern.rs
src/tests/: base.rs  flatten_json.rs  mod.rs
template/: logo_base64.txt  test.docx  thumbnail_base64.txt
